--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -16,8 +16,8 @@ jobs:
       fail-fast: false
       matrix:
         model:
-          - nanopi-r4s
-          - nanopi-r5s
+          #- nanopi-r4s
+          #- nanopi-r5s
           - x86_64
         tag:
           - type: rc2
