--- a/.github/workflows/IPQ60XX.yml
+++ b/.github/workflows/IPQ60XX.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build OpenWrt-IPQ60XX
+name: Build IPQ60XX
 
 on:
   repository_dispatch:
