--- a/.github/workflows/IPQ60XX.yml
+++ b/.github/workflows/IPQ60XX.yml
@@ -183,7 +183,8 @@ jobs:
         artifacts: ${{ env.FIRMWARE_PATH }}/*
         body: |
           **This is OpenWrt Firmware for ${{ env.FIRMWARE_TAG }}**
-          ### 📒 固件信息
+          ### 📒 固件信息(带WIFI)
+          - 这是带WIFI以及NSS的6.6内核固件
           - 💻 平台架构: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}
           - ⚽ 固件源码: ${{ env.REPO_URL }}
           - 💝 源码分支: ${{ env.REPO_BRANCH }}
